src/objects/Solution_Estimate__c.object
<CustomObject>
    <description>Estimate LOE for solutions proposed during requirements gathering activities.</description>
    <fields>
        <fullName>Best_Case_LOE_Hours__c</fullName>
        <label>Best Case LOE (Hours)</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignment Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualForce Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Code Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeted_Release__c</fullName>
        <label>Targeted Release</label>
        <picklist>
            <picklistValues>
                <fullName>Release 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Considerations__c</fullName>
        <label>Technical Considerations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Worst_Case_LOE_Hours__c</fullName>
        <label>Worst Case LOE (Hours)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Solution Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Solution Estimate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>